# jax-jit-static-array

./: .gitignore  CMakeLists.txt  README.md  matmul_check.py  matmul_perf.py  pyproject.toml  tensorbasis_perf.py
.github/workflows/: tests.yml
src/jax_jit_static_array/: matmul.cc  matmul.py  rms_norm.cc  rms_norm.py  tensorbasis.cc  tensorbasis.py
tests/: rms_norm_test.py  test_matmul.py  test_tensorbasis.py
